--- a/Social Media Project-Personal/play.html
+++ b/Social Media Project-Personal/play.html
@@ -1,9 +1,23 @@
 <!<!DOCTYPE html>
 <html>
-<h1>FreeJack</h1>
+<head>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body id="playBody">
+  <h1 id= "playHeader">FreeJack</h1>
 
-<div>
-  <!-- This is where I imagine most of our game is going to take place -->
-  </div>
-  
+  <div>
+    <!-- This is where I imagine most of our game is going to take place -->
+<div id="gameBox">
+
+</div>
+    <div id = "gameOptions"
+    <input type="button" id="btnStart" class="btn" value="start" onclick="startblackjack()">
+            <input type="button" class="btn" value="hit me" onclick="hitMe()">
+            <input type="button" class="btn" value="stay" onclick="stay()">
+    </div>
+
+    </div>
+</body>
+
 </html>
