Minor stylistic edits since previous commit

--- a/Social Media Project-Personal/index.html
+++ b/Social Media Project-Personal/index.html
@@ -11,8 +11,7 @@
 <p> </p>
 
 <div id = "mainDiv"> <!-- This is the section to play (maybe have log-in here)? -->
-  
-  <a href='C:\Users\akrba\Desktop\Loyola Stuff\Fourth Semester\CS 324\Social Media Project-Personal\play.html'><button>Play</button></a>
+  <a href='C:\Users\akrba\Desktop\Loyola Stuff\Fourth Semester\CS 324\Social Media Project-Personal\play.html'><button id = "PlayButton">Play</button></a>
 </div>
 
 <div id = "contactDiv"> <!--This section will be our contact information for all -->
