--- a/Social Media Project-Personal/play.html
+++ b/Social Media Project-Personal/play.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="index.css">
@@ -13,8 +13,8 @@
 </div>
     <div id = "gameOptions"
     <input type="button" id="btnStart" class="btn" value="start" onclick="startblackjack()">
-            <input type="button" class="btn" value="hit me" onclick="hitMe()">
-            <input type="button" class="btn" value="stay" onclick="stay()">
+            <input type="button" class="btn" value="Hit Me" onclick="hitMe()">
+            <input type="button" class="btn" value="Stay" onclick="stay()">
     </div>
 
     </div>
