--- a/FreeJack-GitRep/play.html
+++ b/FreeJack-GitRep/play.html
@@ -8,14 +8,35 @@
 
   <div>
     <!-- This is where I imagine most of our game is going to take place -->
-<div id="gameBox">
-
-</div>
-    <div id = "gameOptions"
-    <input type="button" id="btnStart" class="btn" value="start" onclick="startblackjack()">
-            <input type="button" class="btn" value="Hit Me" onclick="hitMe()">
-            <input type="button" class="btn" value="Stay" onclick="stay()">
+    <div id = "Cards">
+      <div id = "Player Cards"></div>
+      <div id = "Dealer Cards"></div>
     </div>
+
+    <br>
+
+    <div id="gameBox">
+  <input type="button" id="btnStart" class="btn" value="New Game" onclick="startblackjack()">
+  <input type="button" id="btnHit" class="btn" value="Hit Me" onclick="hitMe()">
+  <input type="button" id="btnStay" class="btn" value="Stay" onclick="stay()">
+</div>
+    <br>
+    <h2 id = "MoneyHeader">Money</h2>
+    <div id = "Money"></div>
+    <br>
+
+    <input type = 'number' id = 'playerBet' value = '5' min = '1' />
+    <br>
+
+    <div id = "Scores">
+      <div id = "Score: Dealer"></div>
+      <div id = "Score: Player"></div>
+    </div> 
+    <br>
+
+    <textArea id = "msgBox" rows = "5" cols = "50"></textArea>
+
+    <script src="deckOfCards.js"></script>
 
     </div>
 </body>
