Fixed issue with variable naming of dealer and player objects in the hit and drawDealer functions. Game is now able to at least display some* error messages

--- a/FreeJack-GitRep/play.html
+++ b/FreeJack-GitRep/play.html
@@ -16,7 +16,7 @@
     <br>
 
   <input type="button" id="btnStart" class="button" value="New Game" onclick='newGame();'/>
-  <input type="button" id="btnHit" class="button" value="Hit Me" onclick='hit();'/>
+  <input type="button" id="btnHit" class="button" value="Hit" onclick='hit();'/>
   <input type="button" id="btnStay" class="button" value="Stay" onclick='stand();'/>
 
     <br>
