Made some stylistic changes to the index.html and play.html files

--- a/FreeJack-GitRep/index.html
+++ b/FreeJack-GitRep/index.html
@@ -11,7 +11,8 @@
 <p> </p>
 
 <div id = "mainDiv"> <!-- This is the section to play (maybe have log-in here)? -->
-  <a href='C:\Users\akrba\Desktop\Loyola Stuff\Fourth Semester\CS 324\Social Media Project-Personal\play.html'><button id = "PlayButton">Play</button></a>
+  <a href='play.html'><button id = "PlayButton">Play</button></a>
+  <img id = 'pokerImg' src="https://ak2.picdn.net/shutterstock/videos/11539592/thumb/10.jpg">
 </div>
 
 <div id = "contactDiv"> <!--This section will be our contact information for all -->
