--- a/FreeJack-GitRep/play.html
+++ b/FreeJack-GitRep/play.html
@@ -4,16 +4,17 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body id="playBody">
-  <script src="deckOfCards.js"></script>
   <h1 id= "playHeader">FreeJack</h1>
 
     <!-- This is where I imagine most of our game is going to take place -->
       <div id = "Player Cards"></div>
       <br>
       <div id = "Dealer Cards"></div>
-    
 
-    <br>
+      <!--Here is the canvas. In here, we will want to display cards-->
+      <canvas id="dealerCanvas" width="300" height="200"></canvas>
+      <canvas id="playerCanvas" width="300" height="200"></canvas>
+      <br>
 
   <input type="button" id="btnStart" class="button" value="New Game" onclick='newGame();'/>
   <input type="button" id="btnHit" class="button" value="Hit" onclick='hit();'/>
@@ -35,6 +36,7 @@
 
     <h3 id="msgBox"></h3>
 
+    <script src="deckOfCards.js"></script>
 </body>
 
 </html>
