Made changes to HTML/CSS to improve the look of the site

--- a/FreeJack-GitRep/index.html
+++ b/FreeJack-GitRep/index.html
@@ -2,27 +2,18 @@
 <html>
 <head>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 
+<div class = "flex-container">
 <h1 id = "Title">FreeJack: A COMP324 Project</h1>
-<hr />
-  <h2>Version: 1.0</h2>
-<p> </p>
-
-<div id = "mainDiv"> <!-- This is the section to play (maybe have log-in here)? -->
-  <a href='play.html'><button id = "PlayButton">Play</button></a>
-  <img id = 'pokerImg' src="https://ak2.picdn.net/shutterstock/videos/11539592/thumb/10.jpg">
 </div>
 
-<div id = "contactDiv"> <!--This section will be our contact information for all -->
-<h4>Contact info:</h4>
-<p>
-  e-mails:
-  akrbanjevic1@luc.edu
-  jweimer1@luc.edu
-</p>
-</div>
+ <!-- This is the section to play (maybe have log-in here)? -->
+  <div class="flex-container">
+  <a href='play.html'><button id = "PlayButton" class = "w3-button w3-teal">Play</button></a>
+  </div>
 
 </body>
 </html>
