Added ability to display poker chips for money. still having issues though...

--- a/FreeJack-GitRep/index.html
+++ b/FreeJack-GitRep/index.html
@@ -6,13 +6,22 @@
 </head>
 <body>
 
-<div class = "flex-container">
-<h1 id = "Title">FreeJack: A COMP324 Project</h1>
-</div>
+  <header>
+    <div class="container">
+      <h1 id= "indexHeader">FreeJack</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Credits</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
  <!-- This is the section to play (maybe have log-in here)? -->
   <div class="flex-container">
-  <a href='play.html'><button id = "PlayButton" class = "w3-button w3-teal">Play</button></a>
+    <a href='play.html'><button id = "PlayButton" class = "w3-button w3-teal">Play</button></a>
   </div>
 
 </body>
